Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -26,7 +26,7 @@
                 --base-font-size: 0.4cm;
                 --header-font-size: 0.8cm;
                 --sub-header-font-size: 0.6cm;
-                --font-family: 'Comic Sans MS', 'Arial', sans-serif;
+                --font-family: 'Verdana', 'Arial', sans-serif;
             }
 
 
