--- a/src/main/webapp/inward/report_md_inward_bill.xhtml
+++ b/src/main/webapp/inward/report_md_inward_bill.xhtml
@@ -10,24 +10,24 @@
     <ui:define name="subcontent">
         <h:form>
             <p:panel>
-                <h:panelGrid columns="5" style="min-width: 100%;">                    
+                <h:panelGrid columns="6" class="w-100 my-2">                    
                     <h:outputLabel value="From"/>
-                    <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{mdInwardReportController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >
+                    <p:calendar styleClass="dateTimePicker mx-2" id="fromDate" value="#{mdInwardReportController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >
                         <f:ajax event="dateSelect"   render="tbl" execute="@this toDate" listener="#{mdInwardReportController.makeBillNull}"/>
                     </p:calendar>
                     <h:outputLabel value="To"/>
-                    <p:calendar id="toDate" value="#{mdInwardReportController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >
+                    <p:calendar styleClass="mx-2" id="toDate" value="#{mdInwardReportController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >
                         <f:ajax event="dateSelect"   render="tbl" execute="@this fromDate" listener="#{mdInwardReportController.makeBillNull}"/>
                     </p:calendar>
 
-                    <p:panelGrid columns="2" >
-                        <p:commandButton ajax="false" value="Process By Added Date" 
-                                         action="#{mdInwardReportController.createServiceBillsByAddedDate}"
-                                         style="float: right;"  />
-                        <p:commandButton ajax="false" value="Process By Discharge Date" 
-                                         action="#{mdInwardReportController.createServiceBillsByDischargeDate()}"
-                                         style="float: right;"  />
-                    </p:panelGrid>
+
+                    <p:commandButton ajax="false" value="Process By Added Date" 
+                                     action="#{mdInwardReportController.createServiceBillsByAddedDate}"
+                                      />
+                    <p:commandButton ajax="false" value="Process By Discharge Date" 
+                                     action="#{mdInwardReportController.createServiceBillsByDischargeDate()}"
+                                       />
+
                 </h:panelGrid>   
 
                 <p:dataTable id="tbl" value="#{mdInwardReportController.bills}" rowIndexVar="i" var="bill" filteredValue="#{mdInwardReportController.fillterBill}" sortBy="#{bill.institution.id}"
