--- a/src/main/webapp/inward/report_out_side_inward_bill.xhtml
+++ b/src/main/webapp/inward/report_out_side_inward_bill.xhtml
@@ -13,25 +13,35 @@
                 <f:facet name="header">
                     <p:outputLabel value="Out Side Service Bill reoprt" />
                 </f:facet>
-                <h:panelGrid columns="2">                    
+
+                <p:panelGrid columns="6" class="my-2">
                     <h:outputLabel value="From"/>
-                    <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{inwardReportController.fromDate}" 
-                                navigator="false" pattern="dd MMMM yyyy hh mm ss a" />
+                    <p:calendar 
+                        styleClass="dateTimePicker mx-2" 
+                        id="fromDate" 
+                        value="#{inwardReportController.fromDate}" 
+                        navigator="false" 
+                        pattern="dd MMMM yyyy hh mm ss a" />
 
                     <h:outputLabel value="To"/>
-                    <p:calendar styleClass="dateTimePicker" id="toDate" value="#{inwardReportController.toDate}" 
-                                navigator="false" pattern="dd MMMM yyyy hh mm ss a" />
+                    <p:calendar 
+                        styleClass="dateTimePicker mx-2" 
+                        id="toDate" 
+                        value="#{inwardReportController.toDate}"   
+                        navigator="false" pattern="dd MMMM yyyy hh mm ss a" />
 
                     <h:outputLabel value="Institution"/>
                     <p:autoComplete id="ins" value="#{inwardReportController.institution}"
                                     completeMethod="#{institutionController.completeIns}"
                                     var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" placeholder="Institution"
-                                    size="30"  style="width: 400px;">
+                                    class="mx-2">
                         <p:column>
                             #{ix.name}
                         </p:column>
                     </p:autoComplete>
 
+                </p:panelGrid>
+                <p:panelGrid columns="12" class="w-100 my-2">                    
                     <h:outputLabel value="Date"/>
                     <p:selectOneRadio value="#{inwardReportController.reportKeyWord.string}">
                         <f:selectItem itemLabel="Discharge Date" itemValue="0" />
@@ -44,7 +54,9 @@
                         <f:selectItem itemLabel="Paid" itemValue="1" />
                         <f:selectItem itemLabel="All" itemValue="2" />
                     </p:selectOneRadio>
-
+                </p:panelGrid>
+                
+                <h:panelGrid columns="3" class="my-2">
                     <p:commandButton ajax="false" value="Process" 
                                      action="#{inwardReportController.createOutSideBills()}"/>
                     <!--                    <p:commandButton ajax="false" value="Process By Added Date" 
@@ -67,7 +79,7 @@
                     <p:commandButton value="Print" ajax="false" action="#" >
                         <p:printer target="gpBillPreview" ></p:printer>
                     </p:commandButton>
-                </h:panelGrid>   
+                </h:panelGrid>
 
                 <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder">
                     <p:dataTable id="tbl" value="#{inwardReportController.billItems}" rowIndexVar="i" var="bi">
