--- a/src/main/webapp/inward/report_md_inward_item_1.xhtml
+++ b/src/main/webapp/inward/report_md_inward_item_1.xhtml
@@ -123,7 +123,7 @@
 
 
 
-                    <p:panelGrid columns="7">
+                    <h:panelGrid columns="7" class="my-2">
                         <p:commandButton ajax="false" value="Process by Bill Created Date" 
                                          action="#{mdInwardReportController.createItemWithFeeByAddedDate1}"  />
                         <p:commandButton ajax="false" value="Process by Discharge Date" 
@@ -143,7 +143,7 @@
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >
                             <p:printer target="reportPrint"/>
                         </p:commandButton> 
-                    </p:panelGrid>                    
+                    </h:panelGrid>                    
 
                 </p:panel>   
 
