--- a/src/main/webapp/credit/cash_inward_access.xhtml
+++ b/src/main/webapp/credit/cash_inward_access.xhtml
@@ -8,7 +8,7 @@
       >
 
     <h:body>
-        <ui:composition template="/credit/index_inward_due_access.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
             <ui:define name="subcontent">
                 <h:form>
                     <p:panel>
