--- a/src/main/webapp/credit/cash_inward_access_age.xhtml
+++ b/src/main/webapp/credit/cash_inward_access_age.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/credit/index_inward_due_access.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
             <ui:define name="subcontent">
                 <h:form>            
                     <p:commandButton class="my-2" id="btnSearch" ajax="false" value="Process Cash Access Age" action="#{creditCompanyDueController.createInwardCashAgeTableAccess()}"  />
