--- a/src/main/webapp/credit/inward_due_age_credit_company_detail.xhtml
+++ b/src/main/webapp/credit/inward_due_age_credit_company_detail.xhtml
@@ -8,7 +8,7 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/inward/inward_reports.xhtml">
             <ui:define name="content">
                 <h:form>            
                     <p:commandButton class="mx-1" id="btnSearch" ajax="false" value="Process Due Age" action="#{creditCompanyDueController.createInwardAgeTable()}"  />
