--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -33,7 +33,8 @@
         </style>
 
 
-        <h:panelGroup id="gpPrint" layout="block" class="printStyle">
+        <h:panelGroup id="gpPrint" layout="block" class="printStyle" 
+                      style="padding:1cm; margin-left: 3cm; margin-right: 2cm; ">
 
             <!-- Bill Header -->
             <!-- Bill Header -->
