--- a/src/main/webapp/pharmacy/pharmacy_report_grn_detail_by_supplier.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_grn_detail_by_supplier.xhtml
@@ -86,14 +86,16 @@
                                  sortBy="#{b.billType}"  >
 
                         <f:facet name="header"> 
-                            <h:outputLabel value="From" />
+                            <h:outputLabel value="From :" />&nbsp;&nbsp;
                             <h:outputLabel  value="#{commonReport.fromDate}" >
                                 <f:convertDateTime pattern="dd MM yyyy HH:mm a"/>
-                            </h:outputLabel>                          
-                            <h:outputLabel value="To"/>
+                            </h:outputLabel>    
+                            &nbsp;&nbsp;
+                            <h:outputLabel value="To :"/>&nbsp;&nbsp;
                             <h:outputLabel  value="#{commonReport.toDate}" >
                                 <f:convertDateTime pattern="dd MM yyyy HH:mm a"/>
                             </h:outputLabel>
+                            <br/>
                             <h:outputLabel value="GRN by - #{commonReport.department.name}"/> 
                             &#13;&nbsp;
                             <h:outputLabel value="GRN"/>
