--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_detail.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_detail.xhtml
@@ -10,23 +10,35 @@
     <ui:define name="subcontent">
         <h:form>
             <p:panel id="panelPrint" styleClass="noBorder summeryBorder" header="Sale Detail By Bill">
-                <h:panelGrid columns="2" styleClass="noPrintButton">
-                    <h:outputLabel value="From Date"/>
-                    <p:calendar value="#{pharmacySaleReport.fromDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a"  >
-                    </p:calendar>
-                    <h:outputLabel value="To Date"/>
-                    <p:calendar value="#{pharmacySaleReport.toDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" >
-                    </p:calendar>
-                    <h:outputLabel value="Department"/>
-                    <p:autoComplete value="#{pharmacySaleReport.department}" completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
-                    </p:autoComplete>
-                    <h:outputLabel value="Payment Method"/>
-                    <p:selectOneMenu   id="pay" value="#{pharmacySaleReport.paymentMethod}">    
-                        <f:selectItem itemLabel="Select Payment Methord"/>
-                        <f:selectItems value="#{enumController.paymentMethods}"/>
-                    </p:selectOneMenu>
-                </h:panelGrid>
+                <div class="row">
+                    <div class="col-md-5">
+                        <h:outputLabel value="From Date"/>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <p:calendar value="#{pharmacySaleReport.fromDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a"  >
+                        </p:calendar>
+                    </div>
+                    <div class="col-md-5">
+                        <h:outputLabel value="To Date"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <p:calendar value="#{pharmacySaleReport.toDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" >
+                        </p:calendar>
+                    </div>
+                </div>
+                <p:spacer height="10"></p:spacer>
+                <div class="row">
+                    <div class="col-md-5">
+                        <h:outputLabel value="Department"/>&nbsp;&nbsp;
+                        <p:autoComplete value="#{pharmacySaleReport.department}" completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
+                        </p:autoComplete>
+                    </div>
+                    <div class="col-md-5">
+                        <h:outputLabel value="Payment Method"/>&nbsp;&nbsp;
+                        <p:selectOneMenu   id="pay" value="#{pharmacySaleReport.paymentMethod}">    
+                            <f:selectItem itemLabel="Select Payment Methord"/>
+                            <f:selectItems value="#{enumController.paymentMethods}"/>
+                        </p:selectOneMenu>
+                    </div>
+                </div>
 
+                <p:spacer height="10"></p:spacer>
                 <h:panelGrid columns="3">
                     <p:commandButton ajax="false" value="Process" action="#{pharmacySaleReport.createSaleReportByDateDetail()}"/>
                     <p:commandButton actionListener="#{pharmacySaleReport.createSaleReportByDateDetail()}" ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
