--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method.xhtml
@@ -52,9 +52,10 @@
                     </p:commandButton>
                 </h:panelGrid>
 
-                <!--                <h:panelGrid styleClass="printBlock" columns="2">
+                                <h:panelGrid styleClass="printBlock" columns="2">
+                                    <h:outputLabel value=" Department Sale Report Summary"/>  
                                     <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
-                                    <h:outputLabel value=" DEPARTMENT SALE REPORT SUMMERY"/>                   
+                                                     
                                     <h:outputLabel value="From Date :  "/>
                                     <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
                                         <f:convertDateTime pattern="dd MMMM yyyy" />
@@ -63,7 +64,7 @@
                                     <h:outputLabel value="#{pharmacySaleReport.toDate}"  >
                                         <f:convertDateTime pattern="dd MMMM yyyy" />
                                     </h:outputLabel>                       
-                                </h:panelGrid>-->
+                                </h:panelGrid>
                 <p:spacer height="15"/>
                 <p:dataTable id="sum1" value="#{pharmacySaleReport.billedPaymentSummery.bills}" var="i">
                     <f:facet name="header">  
