--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method_by_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method_by_bill.xhtml
@@ -12,7 +12,7 @@
             <p:panel id="panelPrint" styleClass="noBorder summeryBorder" header="Sale Summary By Payment Method(By Bill)">
                 <div class="row">
                     <div class="col-md-4">
-                        <h:outputLabel value="From Date"/>
+                        <h:outputLabel value="From Date"/>&nbsp;&nbsp;
                         <p:calendar value="#{pharmacySaleReport.fromDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" class="w-100 p-2" >
                         </p:calendar>
                     </div>
@@ -21,6 +21,9 @@
                         <p:calendar value="#{pharmacySaleReport.toDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" class="w-100 p-2" >
                         </p:calendar>
                     </div>
+                    
+                </div>
+                <div class="row">
                     <div class="col-md-4">
                         <h:outputLabel value="Department"/>
                         <p:autoComplete styleClass="noPrintButton"  value="#{pharmacySaleReport.department}"  style="text-align: left; margin: 5px; padding: 5px;"  completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
@@ -39,9 +42,10 @@
                     </p:commandButton>
                 </h:panelGrid>
 
-                <!--                <h:panelGrid styleClass="printBlock" columns="2">
+                                <h:panelGrid styleClass="printBlock" columns="2">
+                                    <h:outputLabel value=" Department Name"/>
                                     <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
-                                    <h:outputLabel value=" DEPARTMENT SALE REPORT SUMMERY"/>                   
+                                                       
                                     <h:outputLabel value="From Date :  "/>
                                     <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
                                         <f:convertDateTime pattern="dd MMMM yyyy" />
@@ -50,21 +54,22 @@
                                     <h:outputLabel value="#{pharmacySaleReport.toDate}"  >
                                         <f:convertDateTime pattern="dd MMMM yyyy" />
                                     </h:outputLabel>                       
-                                </h:panelGrid>-->
+                                </h:panelGrid>
                 <p:spacer height="15"/>
                 <p:dataTable id="sum1" value="#{pharmacySaleReport.billedPaymentSummery.bills}" var="i">
                     <f:facet name="header">  
                         <h:outputLabel value="Report Pharmacy Sale By Date Summary Payment Method"/>
                         <br/>
-                        <h:outputLabel value="From  "/>
+                        <h:outputLabel value="From  :"/>&nbsp;&nbsp;
                         <h:outputLabel value="#{pharmacySaleReport.fromDate}">
                             <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy"  ></f:convertDateTime>
                         </h:outputLabel>
                         <p:spacer width="10" height="1"/>
-                        <h:outputLabel value="To  "/>
+                        <h:outputLabel value="To  :"/>&nbsp;&nbsp;
                         <h:outputLabel value="#{pharmacySaleReport.toDate}">
                             <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy"  ></f:convertDateTime>
                         </h:outputLabel>&#13;&nbsp;
+                        <br/>
                         <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
                         &#13;&nbsp;
                     </f:facet>
