--- a/src/main/webapp/channel/channel_payment_report.xhtml
+++ b/src/main/webapp/channel/channel_payment_report.xhtml
@@ -15,7 +15,7 @@
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
                 <p:panel  header="Channel Bill List">
-                    <h:panelGrid columns="2" styleClass="noPrintButton"> 
+                    <p:panelGrid columns="2" styleClass="noPrintButton"> 
                         <h:outputLabel value="From Date"/>
                         <p:calendar id="frmDate" value="#{channelReportController.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" ></p:calendar>
 
@@ -24,11 +24,11 @@
                     
                         <h:outputLabel value="Consultant"/>
                         <au:completeConsultant value="#{channelReportController.staff}"/>
-                    </h:panelGrid>
-                    <h:panelGrid columns="4"> 
+                    </p:panelGrid>
+                    <h:panelGrid columns="4" class="my-2"> 
                         <p:commandButton ajax="false" id="btnRefresh" value="Process Created Date" action="#{channelReportController.createChannelDoctorPaymentTable}">
                         </p:commandButton>                        
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;  margin-left: 10px; margin-right: 10px" >
                             <p:printer target="tbl"  />
                         </p:commandButton>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
@@ -37,7 +37,7 @@
                     </h:panelGrid>
 
                 </p:panel>
-                <p:panel id="billFeeReport" styleClass="noBorder summeryBorder" header="Channel Bill List">
+                <p:panel id="billFeeReport"  header="Channel Bill List">
 
                     <p:dataGrid value="#{channelReportController.doctorPaymentSummeryRows}" var="row" id="tbl" columns="1">
                         <p:dataTable value="#{row.doctorPaymentSummeryRowSubs}" var="da">
@@ -58,7 +58,7 @@
                             <p:subTable value="#{da.bills}" var="sub">
                                 <f:facet name="header">
                                     <p:outputLabel value="#{da.date}">
-                                        <f:convertDateTime pattern="dd-MMM-yyyy"/>
+                                        <f:convertDateTime pattern="dd MMM yyyy"/>
                                     </p:outputLabel>&nbsp;&nbsp;&nbsp;&nbsp;
                                     <p:outputLabel value="No of Patient:#{da.cashCount+da.onCallCount+da.staffCount+da.agentCount}"/>
                                     &nbsp;&nbsp;&nbsp;&nbsp;
