--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -251,7 +251,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="Peak Hour Statistics" action="#{reportController.navigateToLabPeakHourStatistics()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Sample Carrier" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Organism Antibiotic Sensitivity" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="Investigation Wise Research" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Investigation Wise Research" action="#{reportController.navigateToLabInvetigationWiseReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="Annual Test Statistics" />
                                         <p:commandButton   class="w-100"  ajax="false" value="External Laboratary Work load" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Investigation Month End Summary" />
