Close Issue#1332 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -255,6 +255,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="Annual Test Statistics" />
                                         <p:commandButton   class="w-100"  ajax="false" value="External Laboratary Work load" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Investigation Month End Summary" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="Lab Register" action="#{reportController.navigateToLabRegisterReport()}"/>
                                     </div>
                                 </p:tab>
 
