Signed-off-by: Buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/bill_summery.xhtml
+++ b/src/main/webapp/bill_summery.xhtml
@@ -51,10 +51,10 @@
                                 <p:panel header="Bill Detail">
                                     <p:panelGrid columns="2">
                                         <h:outputText value="Bill No (Ins Id) :" ></h:outputText>
-                                        <h:outputText value="#{billSearch.billSearch.insId}" />
+                                        <p:inputText value="#{billSearch.billSearch.insId}" />
 
                                         <h:outputText value="Bill No (Dept Id) :" ></h:outputText>
-                                        <h:outputText value="#{billSearch.billSearch.deptId}" />
+                                        <p:inputText value="#{billSearch.billSearch.deptId}" />
 
                                         <h:outputText value="Billed bill:" rendered="#{billSearch.billSearch.billedBill ne null}"></h:outputText>
                                         <h:outputText value="#{billSearch.billSearch.billedBill.id}" rendered="#{billSearch.billSearch.billedBill ne null}" />
