--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -23,10 +23,11 @@
         <style type="text/css">
             /* Define font size and font family variables */
             :root {
-                --base-font-size: 0.4cm;
+                --base-font-size: 0.6cm;
                 --header-font-size: 0.8cm;
-                --sub-header-font-size: 0.6cm;
+                --sub-header-font-size: 0.7cm;
                 --font-family: 'Verdana', 'Arial', sans-serif;
+                line-height: 0.1em;
             }
 
 
@@ -34,7 +35,7 @@
 
 
         <h:panelGroup id="gpPrint" layout="block" class="printStyle" 
-                      style="padding:1cm; margin-left: 3cm; margin-right: 2cm; ">
+                      style="padding:2cm; margin: 3cm; margin-right: 4cm; margin-top: 0cm;">
 
             <!-- Bill Header -->
             <!-- Bill Header -->
@@ -195,7 +196,8 @@
             <br/>
 
             <!-- Cashier -->
-            <h:outputLabel value="Cashier : #{cc.attrs.bill.creater.webUserPerson.name}" style="text-align: right; font-size: var(--sub-header-font-size); font-family: var(--font-family)"/>
+            <h:outputLabel value="Cashier : #{cc.attrs.bill.creater.webUserPerson.name}" 
+                           style="margin-top: 2cm; text-align: right; font-size: var(--sub-header-font-size); font-family: var(--font-family)"/>
 
         </h:panelGroup>
 
