Closes Issue#1342 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/inward/inward_reprint_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_reprint_bill_service.xhtml
@@ -152,6 +152,13 @@
                                     <bill:inwardBillPrintRuhunu bill="#{bill}" dup="false"/>
                                 </ui:repeat>
                             </h:panelGroup>
+                            
+                            <h:panelGroup rendered="#{sessionController.currentPreference.printLabelForOPdBill eq false and sessionController.currentPreference.applicationInstitution ne 'Arogya'}}">
+                                <ui:repeat value="#{inwardSearch.bill}" var="b">
+                                    <bill:inwardBillPrintFiveFive bill="#{b}" dup="false"/>                        
+                                </ui:repeat>  
+                            </h:panelGroup>
+                            
 
                             <h:panelGroup rendered="#{sessionController.currentPreference.printLabelForOPdBill eq true}">
                                 <ui:repeat value="#{inwardSearch.bill}" var="b">
