Signed-off-by: Buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -35,7 +35,7 @@
 
 
         <h:panelGroup id="gpPrint" layout="block" class="printStyle" 
-                      style="padding:2cm; margin: 3cm; margin-right: 4cm; margin-top: 0cm;">
+                      style="padding:2cm; margin: 3cm; margin-right: 4cm; margin-top: 0cm; padding-top: 0cm;">
 
             <!-- Bill Header -->
             <!-- Bill Header -->
